# internal/routes/registry.go
@@ -1,10 +1,13 @@
 package routes
 
 import (
+	"go-apiserver-template/docs"
 	"go-apiserver-template/internal/global"
 	v1 "go-apiserver-template/internal/routes/api/v1"
+
 	"os"
 
+	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	swagfiles "github.com/swaggo/files"
 	ginswag "github.com/swaggo/gin-swagger"
@@ -12,16 +15,21 @@ import (
 
 // Register register all routers
 func Register(root *gin.Engine) {
+	root.Use(cors.Default())
 	root.GET("/version", Version)
 	root.GET(global.HealthzRelativePath, Healthz)
 
 	if os.Getenv(global.RunModeEnvKey) == global.RunModeDev {
+		if v := os.Getenv(global.ExternalHostEnvKey); len(v) > 0 {
+			docs.SwaggerInfo.Host = v
+		}
 		root.GET("/swagger/*any", ginswag.WrapHandler(swagfiles.Handler))
 	}
 
 	apiv1 := root.Group("/api/v1")
 
 	registerUserRouters(apiv1)
+	registerUserOrderRouters(apiv1)
 }
 
 // registerUserRouters register user routers
@@ -34,14 +42,12 @@ func registerUserRouters(base *gin.RouterGroup) {
 	r.POST("", v1.CreateUser)
 	r.PUT("/:uid", v1.UpdateUser)
 	r.DELETE("/:uid", v1.DeleteUser)
-
-	registerUserOrderRouters(r)
 }
 
 // registerUserOrderRouters register user order routers
 // path: /api/v1/users/:uid/orders
 func registerUserOrderRouters(base *gin.RouterGroup) {
-	r := base.Group("/:uid/orders")
+	r := base.Group("/orders")
 
-	r.GET("/:oid", v1.GetUserOrder)
+	r.GET("/:oid", v1.GetOrder)
 }
